# wework-robot-opencode

./: .env.example  .gitmodules  PLAN.md  README.md  app.py  config.py  opencode_client.py  pyproject.toml  requirements.txt  roadmap.md  wework_crypto.py  wework_send.py
tests/: __init__.py  test_config.py  test_e2e.py  test_opencode_ask.py  test_webhook_handler.py  test_wework_send.py
